--- a/main.html
+++ b/main.html
@@ -10,7 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<nav>
+	<ul>
+		<li><a href="#home">Home</a></li>
+		<li><a href="#actor">About</a></li>
+		<li><a href="#Contact">Contact</a></li>
+	</ul>
+</nav>
 
+	<section>
+		<video controls width="320">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</video>
+
+		<video controls width="320">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+		</video>
+
+		<video controls width="320">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+		</video>
+	</section>
 </body>
 
 </html>
