--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		<li><a href="#Contact">Contact</a></li>
 	</ul>
 </nav>
-
+<h3> 3 random videos</h3>
 	<section>
 		<video controls width="320">
 			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
