--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 </script>
 <nav>
 	<ul>
-		<li><a href="#home">Home</a></li>
-		<li><a href="#actor">About</a></li>
-		<li><a href="#Contact">Contact</a></li>
+		<li><a href="https://www.youtube.com/">Home</a></li>
+		<li><a href="https://www.linkedin.com/feed/">About</a></li>
+		<li><a href="https://github.com/">Contact</a></li>
 	</ul>
 </nav>
 <h3> 3 random videos</h3>
