--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 <nav>
 	<ul>
 		<li><a href="https://www.youtube.com/">Home</a></li>
-		<li><a href="https://www.linkedin.com/feed/">About</a></li>
-		<li><a href="https://github.com/">Contact</a></li>
+		<li><a href="https://www.linkedin.com/feed/">About us</a></li>
+		<li><a href="https://github.com/">Contact us</a></li>
 	</ul>
 </nav>
 <h3> 3 random videos</h3>
